<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purpleishGrey"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="461dp"
        android:layout_gravity="center"
        android:layout_marginTop="1dp"
        android:background="@drawable/thecheezery" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@string/light"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="#FFFFFF"
        android:text="@string/welcome"
        />

    <TextView
        android:layout_width="319dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/description"
        android:textColor="#A5ADAB"
        android:textSize="17sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="219dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_button"
        android:text="@string/get_started"
        android:textColor="@color/dustyWhite"
        />
</LinearLayout>